--- a/snakemake/workflow.RNA-mut/Snakefile
+++ b/snakemake/workflow.RNA-mut/Snakefile
@@ -3,7 +3,7 @@ rule all:
 #==============================
     input:
         log_snake=config['out_path']+"/log.Snakefile",
-        count_mat=expand(config['out_path']+"/TET-{ID}/TEcount_out.cntTable", ID=config["ID"])
+        outnpy=expand(config['out_path']+"/{ID}/base_mismatch_perc.npy", ID=config["ID"])
 
 #Create log file for Snakefile
 #==============================
@@ -16,7 +16,7 @@ rule log_snake:
 
 #Run RNA mut rule
 #==============================
-rule RNA-mut:
+rule RNA_mut:
 #==============================
     input:
         inp=config['in_path']+"/{ID}/Aligned.sortedByCoord.out.bam"
@@ -24,9 +24,8 @@ rule RNA-mut:
         outnpy=config['out_path']+"/{ID}/base_mismatch_perc.npy",
         
     conda:
-        "RNA-mut.yaml"
+        "RNA_mut.yaml"
 
     script:
-        """
-        RNA-mut.py
-        """
+        "RNA_mut.py"
+
